<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rubinathapa.mehmet.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1A1B1A ">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1A1B1A  "
            android:orientation="vertical">


            <ImageView
                android:id="@+id/Activity_main_mehmet_imageview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:scaleType="fitXY"
                android:src="@drawable/mehmet" />

            <TextView
                android:id="@+id/activity_main_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/nameLabel"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_main_position_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/positionLabel"
                android:textColor="#FF0000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_main_dayofwriting_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/dayofwriting"
                android:drawableStart="@drawable/dayofwriting"
                android:gravity="center"
                android:text="@string/dayOfWritingLabel"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_main_allpost_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/posts"
                android:drawableStart="@drawable/posts"
                android:gravity="center"
                android:text="@string/allPostLabel"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_main_abouttheauthor_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/user"
                android:drawableStart="@drawable/user"
                android:gravity="center"
                android:text="@string/aboutTheAuthorLabel"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_main_contactus_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/contacts"
                android:drawableStart="@drawable/contacts"
                android:gravity="center"
                android:text="@string/contactUsLabel"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="0dp"
                android:drawableLeft="@drawable/rightarrow"
                android:drawableStart="@drawable/rightarrow"
                android:background="@null"
                android:text="@string/urlLabel"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


    <!--toolbar start-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_stack"

                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:src="@drawable/close" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <!--toolbar end-->


</RelativeLayout>
